# Orchard

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  task_tracker.md
.github/workflows/: ci.yml
cmake/: FindWinFsp.cmake  OrchardProject.cmake  OrchardTest.cmake
docs/: apfs-windows-research.md  fixture-corpus-policy.md  v1-roadmap.md
packaging/wix/: README.md
src/: CMakeLists.txt
src/apfs-core/: CMakeLists.txt
src/apfs-core/include/orchard/apfs/: btree.h  discovery.h  file_read.h  format.h  fs_records.h  fs_search.h  inspection.h  link_read.h  object.h  omap.h  probe.h  volume.h
src/apfs-core/src/: btree.cpp  compression.cpp  discovery.cpp  file_read.cpp  format.cpp  fs_keys.cpp  fs_records.cpp  fs_search.cpp  inspection.cpp  link_read.cpp  object.cpp  omap.cpp  path_lookup.cpp  policy.cpp  probe.cpp  volume.cpp
src/blockio/: CMakeLists.txt
src/blockio/include/orchard/blockio/: inspection_target.h  reader.h  result.h
src/blockio/src/: inspection_target.cpp  reader.cpp
src/fs-winfsp/: CMakeLists.txt
src/fs-winfsp/include/orchard/fs_winfsp/: directory_query.h  file_info.h  filesystem.h  mount.h  path_bridge.h  placeholder.h  reparse.h  types.h
src/fs-winfsp/src/: directory_query.cpp  file_info.cpp  filesystem.cpp  filesystem_stub.cpp  fs_winfsp_placeholder.cpp  mount.cpp  path_bridge.cpp  reparse.cpp
src/mount-service/: CMakeLists.txt
src/mount-service/include/orchard/mount_service/: device_discovery.h  device_inventory.h  device_monitor.h  mount_registry.h  placeholder.h  runtime.h  service_host.h  types.h
src/mount-service/src/: device_discovery.cpp  device_enumerator.cpp  device_inventory.cpp  device_monitor.cpp  mount_registry.cpp  mount_service_placeholder.cpp  runtime.cpp  service_host.cpp
src/orchardctl/: CMakeLists.txt
src/orchardctl/include/orchard/orchardctl/: placeholder.h
src/orchardctl/src/: orchardctl_placeholder.cpp
src/ui/: CMakeLists.txt  README.md
tests/: CMakeLists.txt
tests/corpus/: README.md  generate-sample-fixtures.ps1
tests/corpus/manifests/: sample-fixtures.json
tests/corpus/samples/: explorer-large.img  gpt-user-data.img  link-behavior.img  plain-user-data.img  sealed-system.img  snapshot-volume.img
tests/fuzz/: CMakeLists.txt  fuzz_smoke.cpp
tests/integration/: CMakeLists.txt  validate_fixture_manifest.cmake  validate_orchard_inspect_output.cmake
tests/mutation/: README.md
tests/support/include/orchard_test/: test.h
tests/unit/: CMakeLists.txt  apfs_tests.cpp  inspection_target_tests.cpp  mount_service_tests.cpp  probe_tests.cpp  reader_tests.cpp
tools/: CMakeLists.txt
tools/dev/: OrchardWinFspTestCommon.ps1  Resolve-OrchardTool.ps1  orchard-format.ps1  orchard-lint.ps1  orchard-service-smoke.ps1  orchard-winfsp-link-smoke.ps1  orchard-winfsp-shell-smoke.ps1  orchard-winfsp-soak.ps1
tools/image-tools/: CMakeLists.txt  README.md
tools/inspect/: CMakeLists.txt
tools/inspect/src/: main.cpp
tools/mount-smoke/: CMakeLists.txt
tools/mount-smoke/src/: main.cpp
